--- a/index.html
+++ b/index.html
@@ -5,22 +5,118 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <link href="https://fonts.googleapis.com/css?family=Chela+One|Raleway" rel="stylesheet"> 
-  <link rel="stylesheet" href="stylesheets/index.css">
+  <link href="https://fonts.googleapis.com/css?family=Chela+One|Raleway:400,400i,800,900" rel="stylesheet"> 
+  <link rel="stylesheet" href="stylesheets/bootsandcats.css">
   <link rel="stylesheet" href="stylesheets/nav.css">
+  <link rel="stylesheet" href="stylesheets/footer.css">
+  <link rel="stylesheet" href="stylesheets/index.css">
 </head>
 <body>
-  <nav>
+  <nav id="nav" class="first-nav">
     <div class="nav-container">
       <div class="nav-left">
-        <a href="#">Kufee</a>
+        <a href="#"><img src="res/images/icons/another-coffee.png" alt=""> Kuffee</a>
       </div>
       <div class="nav-right">
-        <a href="#">Category</a>
-        <a href="#">Shop</a>
-        <a href="#">Contact</a>
+        <a href="views/category.html"><img src="./res/images/icons/inbox-white.png" alt=""> Category</a>
+        <a href="#"><img src="./res/images/icons/heart-white.png" alt=""> Wishlist</a>
+        <a href="#"><img src="./res/images/icons/cart-white.png" alt=""> My Cart</a>
+        <button id="btn_login" class="btn btn-medium btn-blue" type="button">Login</button>
+        <button id="btn_signup" class="btn btn-medium btn-blue-hollow" type="button">Sign Up</button>
       </div>
     </div>
   </nav>
-</body>
+
+  <header>
+    <section>
+      <!-- <p>Have your daily <br> <span class="title-text">Kuffee</span> yet?</p> -->
+      <p>The real deal of <br><span class="title-text">Kuffee</span></p>
+      <a href="#" class="btn btn-blue btn-large btn-round">Get yours now!</a>
+    </section>
+  </header>
+
+  <section class="s1">
+    <img src="./res/images/icons/another-coffee-black.png" alt="">
+    <h1>A glimpse of <span class="title-text">Kuffee</span></h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit ab similique rerum architecto ea maxime officiis hic provident ex laboriosam error aliquid, doloremque optio fuga delectus non sequi? Illum, numquam. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam tempore sunt mollitia, alias eveniet </p>
+  </section>
+
+  <section class="s2">
+    <h1>Why choose us?</h1>
+    <div id="container-card-benefit">
+      <div class="card-benefit">
+        <img src="./res/images/icons/no-chemical.png" alt="">
+        <h2>No Chemical</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia asperiores voluptates corporis dignissimos neque sunt harum accusamus perspiciatis possimus esse odit consectetur excepturi quibusdam</p>
+      </div>
+      <!-- <div class="tall-bar"></div> -->
+      <div class="card-benefit">
+        <img src="./res/images/icons/coffee-beans.png" alt="">
+        <h2>High Quality Beans</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia asperiores voluptates corporis dignissimos neque sunt harum accusamus perspiciatis possimus esse odit consectetur excepturi quibusdam</p>
+      </div>
+      <!-- <div class="tall-bar"></div> -->
+      <div class="card-benefit">
+        <img src="./res/images/icons/leaf.png" alt="">
+        <h2>100% Natural</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia asperiores voluptates corporis dignissimos neque sunt harum accusamus perspiciatis possimus esse odit consectetur excepturi quibusdam</p>
+      </div>
+    </div>
+  </section>
+
+  <section class="s3">
+    <div>
+      <div class="desc-minho">
+        <h1>Idols love <span class="title-text">Kuffee</span> too!</h1>
+        <!-- <p>Min Ho and many other celebrities also loves the original taste and purity of our coffee.</p>  -->
+        <blockquote>
+          <div>
+            "Kuffee is my everyday coffee. It's the best coffee I have ever had and i am having it everyday now!"
+            <p>Lee Min-ho</p>
+          </div>
+        </blockquote>
+      </div>
+    </div>
+  </section>
+
+  <section class="s5">
+    <div class="s5-left">
+      <h1>Join other <span class="title-text">Kuffee</span> cravers now!</h1>
+      <p>Become a member and get 75% Disc. in your first purchase.</p>
+      <img src="./res/images/icons/people-worship-coffee.png">
+      <button class="btn btn-large btn-white-hollow" type="button">Sign Me Up!</button>
+    </div>
+  </section>
+
+  <section class="s4">
+    <div class="desc-map">
+      <h1>Need to reach us?</h1>
+      <p><img src="./res/images/icons/location.png"> Jl. Merak (Komplek Sapi) No. 1000000007</p>
+      <p><img src="./res/images/icons/phone.png"> (011) 01010101</p>
+      <p><img src="./res/images/icons/postalcode.png"> 202022</p>
+    </div>
+    <div class="mapouter"><div class="gmap_canvas"><iframe width="400" height="350" id="gmap_canvas" src="https://maps.google.com/maps?q=krakatau%20medan&t=&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.pureblack.de/google-maps/"></a></div><style>.mapouter{text-align:right;height:350px;width:350px;}.gmap_canvas {overflow:hidden;background:none!important;height:350px;width:400px;}</style></div>
+  </section>
+
+  <footer>
+    <div class="footer-socialmedia">
+      <a href="#"><img src="./res/images/icons/facebook.png"></a>
+      <a href="#"><img src="./res/images/icons/twitter.png"></a>
+      <a href="#"><img src="./res/images/icons/googleplus.png"></a>
+    </div>
+    <div class="footer-text">
+      <p>Jl. Merak (Komplek Sapi) No. 1000000007</p>
+      <p>(011) 01010101</p>
+    </div>
+    <div class="footer-bottom">
+      <p>Copyright &copy; 2018 UPH Stabat. All rights reserved.</p>
+    </div>
+  </footer>
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+  <script src="./scripts/nav.js"></script>
+  <script>
+    
+  </script>
+</body>  
 </html>
