--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Chela+One|Raleway:400,400i,800,900" rel="stylesheet"> 
   <link rel="stylesheet" href="stylesheets/bootsandcats.css">
   <link rel="stylesheet" href="stylesheets/nav.css">
+  <link rel="stylesheet" href="stylesheets/form.css">
   <link rel="stylesheet" href="stylesheets/footer.css">
   <link rel="stylesheet" href="stylesheets/index.css">
 </head>
@@ -26,8 +27,22 @@
       </div>
     </div>
   </nav>
+  <div id="form_platform">
+    <div id="div_login_form">
+      <header>
+        <h1><img src="res/images/icons/another-coffee.png"> Kuffee</h1>
+      </header>
+      <form action="" class="touched">
+        <input type="email" placeholder="Email">
+        <input type="password" placeholder="Password">
+        <button type="submit" class="btn btn-blue btn-medium">LOGIN</button>
+        <p>Don't have an account? <span id="btn_sign_up_first">Sign Up!</span></p>
+      </form>
+    </div>
+  </div>
 
-  <header>
+
+  <header class="main-header">
     <section>
       <!-- <p>Have your daily <br> <span class="title-text">Kuffee</span> yet?</p> -->
       <p>The real deal of <br><span class="title-text">Kuffee</span></p>
