--- a/index.html
+++ b/index.html
@@ -16,14 +16,16 @@
   <nav id="nav" class="first-nav">
     <div class="nav-container">
       <div class="nav-left">
-        <a href="#"><img src="res/images/icons/another-coffee.png" alt=""> Kuffee</a>
+        <a href="index.html"><img src="res/images/icons/another-coffee.png" alt=""> Kuffee</a>
       </div>
       <div class="nav-right">
         <a href="views/category.html"><img src="./res/images/icons/inbox-white.png" alt=""> Category</a>
-        <a href="#"><img src="./res/images/icons/heart-white.png" alt=""> Wishlist</a>
-        <a href="#"><img src="./res/images/icons/cart-white.png" alt=""> My Cart</a>
-        <button id="btn_login" class="btn btn-medium btn-blue" type="button">Login</button>
-        <button id="btn_signup" class="btn btn-medium btn-blue-hollow" type="button">Sign Up</button>
+        <a id="link_wishlist" href="./views/wishlist.html"><img src="./res/images/icons/heart-white.png" alt=""> Wishlist</a>
+        <a id="link_mycart" href="./views/my-cart.html"><img src="./res/images/icons/cart-white.png" alt=""> My Cart</a>
+        <button id="btn_login" class="btn btn-medium btn-blue" type="button" style="display:none">Login</button>
+        <button id="btn_signup" class="btn btn-medium btn-blue-hollow" type="button" style="display:none">Sign Up</button>
+        <span id="span_user" class="btn btn-medium span-profile" type="button" style="display:none">Irvin Delano</span>
+        <button id="btn_logout" class="btn btn-medium btn-orange-hollow" type="button" style="display:none">Logout</button>
       </div>
     </div>
   </nav>
@@ -36,8 +38,8 @@
         <h1><img src="res/images/icons/another-coffee.png"> Kuffee</h1>
       </header>
       <form action="">
-        <input type="email" placeholder="Email">
-        <input type="password" placeholder="Password">
+        <input type="email" placeholder="Email" required>
+        <input type="password" placeholder="Password" required>
         <button type="submit" class="btn btn-blue btn-medium">LOGIN</button>
         <p>Don't have an account? <span id="btn_signup_first">Sign Up!</span></p>
       </form>
@@ -50,20 +52,19 @@
         <h1><img src="res/images/icons/another-coffee.png"> Kuffee</h1>
       </header>
       <form action="">
-        <input type="email" placeholder="Email">
-        <input type="password" placeholder="Password">
+        <input type="text" placeholder="Username" required>
+        <input type="email" placeholder="Email" required>
+        <input type="password" placeholder="Password" required>
         <button type="submit" class="btn btn-orange btn-medium">SIGN UP</button>
         <p>Already have an account? <span id="btn_login_first">Login!</span></p>
       </form>
     </div>
   </div>
 
-
   <header class="main-header">
     <section>
-      <!-- <p>Have your daily <br> <span class="title-text">Kuffee</span> yet?</p> -->
       <p>The real deal of <br><span class="title-text">Kuffee</span></p>
-      <a href="#" class="btn btn-blue btn-large btn-round">Get yours now!</a>
+      <a href="./views/category.html" class="btn btn-blue btn-large btn-round">Get yours now!</a>
     </section>
   </header>
 
@@ -100,7 +101,6 @@
     <div>
       <div class="desc-minho">
         <h1>Idols love <span class="title-text">Kuffee</span> too!</h1>
-        <!-- <p>Min Ho and many other celebrities also loves the original taste and purity of our coffee.</p>  -->
         <blockquote>
           <div>
             "Kuffee is my everyday coffee. It's the best coffee I have ever had and i am having it everyday now!"
@@ -116,7 +116,7 @@
       <h1>Join other <span class="title-text">Kuffee</span> cravers now!</h1>
       <p>Become a member and get 75% Disc. in your first purchase.</p>
       <img src="./res/images/icons/people-worship-coffee.png">
-      <button class="btn btn-large btn-white-hollow" type="button">Sign Me Up!</button>
+      <button id="btn_singmeup" class="btn btn-large btn-white-hollow" type="button">Sign Me Up!</button>
     </div>
   </section>
 
@@ -145,9 +145,18 @@
     </div>
   </footer>
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
   <script src="./scripts/nav.js"></script>
+  <script src="./scripts/form.js"></script>
   <script>
+    let user = Cookies.getJSON('user');
+    $('#btn_singmeup').click(() => {
+      nav.showSignupForm();
+    });
+    if (user && user.loggedIn) {
+      $('section.s5').hide();
+    }
     
   </script>
 </body>  
