--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a id="link_mycart" href="./views/my-cart.html"><img src="./res/images/icons/cart-white.png" alt=""> My Cart</a>
         <button id="btn_login" class="btn btn-medium btn-blue" type="button" style="display:none">Login</button>
         <button id="btn_signup" class="btn btn-medium btn-blue-hollow" type="button" style="display:none">Sign Up</button>
-        <span id="span_user" class="btn btn-medium span-profile" type="button" style="display:none">Irvin Delano</span>
+        <span id="span_user" class="btn btn-medium span-profile" type="button" style="display:none"></span>
         <button id="btn_logout" class="btn btn-medium btn-orange-hollow" type="button" style="display:none">Logout</button>
       </div>
     </div>
@@ -33,7 +33,7 @@
     <div id="div_login_form" style="display:none;">
       <header>
         <div class="div-closer">
-          <img class="closer" src="../res/images/icons/close-slim.png">
+          <img class="closer" src="./res/images/icons/close-slim.png">
         </div>
         <h1><img src="res/images/icons/another-coffee.png"> Kuffee</h1>
       </header>
@@ -71,7 +71,7 @@
   <section class="s1">
     <img src="./res/images/icons/another-coffee-black.png" alt="">
     <h1>A glimpse of <span class="title-text">Kuffee</span></h1>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit ab similique rerum architecto ea maxime officiis hic provident ex laboriosam error aliquid, doloremque optio fuga delectus non sequi? Illum, numquam. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam tempore sunt mollitia, alias eveniet </p>
+    <p>Kuffee is not an ordinary coffee. It is roasted with love. We take care of Kuffee's bean quality every day and evaluate it in the end of the day. Making Kuffee a perfect choice for your daily Kuffee consumption.</p>
   </section>
 
   <section class="s2">
@@ -80,19 +80,19 @@
       <div class="card-benefit">
         <img src="./res/images/icons/no-chemical.png" alt="">
         <h2>No Chemical</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia asperiores voluptates corporis dignissimos neque sunt harum accusamus perspiciatis possimus esse odit consectetur excepturi quibusdam</p>
+        <p>Kuffee's beans are free from chemical preservatives, making it a safe for daily consumption. You can drink it with no worry everyday. Everyday Kuffee means a healthy caffeine life.</p>
       </div>
       <!-- <div class="tall-bar"></div> -->
       <div class="card-benefit">
         <img src="./res/images/icons/coffee-beans.png" alt="">
         <h2>High Quality Beans</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia asperiores voluptates corporis dignissimos neque sunt harum accusamus perspiciatis possimus esse odit consectetur excepturi quibusdam</p>
+        <p>Our Kuffee Beans are roasted at a fine temperature to keep its freshness and quality. Roasting is done at 78 degree Celcius. By doing this, we can preserve Kuffee's real aroma and taste.</p>
       </div>
       <!-- <div class="tall-bar"></div> -->
       <div class="card-benefit">
         <img src="./res/images/icons/leaf.png" alt="">
         <h2>100% Natural</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia asperiores voluptates corporis dignissimos neque sunt harum accusamus perspiciatis possimus esse odit consectetur excepturi quibusdam</p>
+        <p>Our beans come from local gardener. They plant the beans without any pesticides. Therefore, making it 100% natural and healthy!</p>
       </div>
     </div>
   </section>
