--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
   <link rel="stylesheet" href="stylesheets/nav.css">
   <link rel="stylesheet" href="stylesheets/form.css">
   <link rel="stylesheet" href="stylesheets/footer.css">
+  <link rel="stylesheet" href="stylesheets/toaster.css">
   <link rel="stylesheet" href="stylesheets/index.css">
 </head>
 <body>
+  <section id="section_toaster"></section>
+
   <nav id="nav" class="first-nav">
     <div class="nav-container">
       <div class="nav-left">
@@ -147,6 +150,7 @@
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
+  <script src="./scripts/toaster.js"></script>
   <script src="./scripts/nav.js"></script>
   <script src="./scripts/form.js"></script>
   <script>
